
Changes in version 1.0-M3
-------------------------
Package org.springframework.oxm.castor
* fixed #SWS-70: AbstractMarshallerTestCase.testMarshalDOMResult() builds a DOM object that does not retain namespace

Package org.springframework.oxm.castor
* CastorMarshaller uses a XMLClassDescriptorResolver instead of a Mapping (#SWS-54)
* CastorMarshaller marshals to DOM trees correctly (#SWS-59)

Package org.springframework.ws.context
* Refactored MessageContextFactory, SoapMessageContextFactory and implementations into WebServiceMessageFactory

Package org.springframework.ws.soap
* added setId() method to Attachment, to set the Content-ID of MIME attachments (#SWS-53)
* added getResult() to SoapFaultDetail (#SWS-57)

Package org.springframework.ws.soap.security.xwss.callback
* DefaultTimestampValidator no longer requires Expired in request (#SWS-55)
* Digest passwords are handled correctly in the SimplePasswordValidationCallbackHandler (#SWS-56)

Package org.springframework.ws.transport.http
* added MessageDispatcherServlet (#SWS-60)

Package org.springframework.ws.wsdl.wsdl11.builder
* added Wsdl11DefinitionBuilder
* added XsdBasedSoap11Wsdl4jDefinitionBuilder that generates a WSDL based on a schema (#SWS-67)

Package org.springframework.xml.dom
*  fixed #SWS-61: DomContentHandler throwing NullpointerExption on document

Package org.springframework.xml.stream
*  fixed #SWS-75: Java 1.5+ Constructor Used for IllegalStateException

Samples
* added JAX-WS client for Airline sample

Changes in version 1.0-M2
-------------------------
Package org.springframework.oxm
* all marshallers support StaxSources now (#SWS-36)

Package org.springframework.oxm.xstream
* added support for registering custom Converters (#SWS-34)

Package org.springframework.ws.context
* changed contract of MessageContext.getResponse(): now creates a response if none has been created. Required because
  creating SOAP fault when a response was already set threw an exception.